package com.apromore.compliance_centre.riskobligationregister;

import org.springframework.data.repository.CrudRepository;

public interface ControlRepository extends CrudRepository<ControlModel, Long> {

}
