package com.apromore.compliance_centre.riskobligationregister;

import org.springframework.data.repository.CrudRepository;

public interface RiskObligationRepository extends CrudRepository<RiskObligationModel, Long> {
}
